<?xml version="1.0"?>
<package>
  <name>andino_localization</name>
  <version>0.1.0</version>
  <description>
    Localization package for Andino robot. Includes multiple odometry algorithms.
    This package incorporates the rf2o_laser_odometry algorithm.
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>  
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rclcpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>  
  <run_depend>eigen</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
